--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "buildCommand": "cd erp/frontend && npm install && npm run build",
     "outputDirectory": "erp/frontend/dist",
-    "installCommand": "cd erp/frontend && npm install && cd ../../teams/frontend && npm install",
+    "installCommand": "cd erp/frontend && npm install",
     "framework": null,
     "rewrites": [
         {
