feat(gateway): Add Sentry error monitoring and logging

--- a/gateway/package.json
+++ b/gateway/package.json
@@ -9,6 +9,7 @@
         "start": "node src/index.js"
     },
     "dependencies": {
+        "@sentry/node": "^10.32.1",
         "@upstash/redis": "^1.36.0",
         "cors": "^2.8.5",
         "dotenv": "^16.6.1",
