--- a/teams/backend/package.json
+++ b/teams/backend/package.json
@@ -10,14 +10,17 @@
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "compression": "^1.8.1",
         "cors": "^2.8.5",
         "dotenv": "^16.6.1",
         "express": "^4.22.1",
+        "helmet": "^8.1.0",
         "jsonwebtoken": "^9.0.3",
         "morgan": "^1.10.0",
         "multer": "^2.0.2",
         "pg": "^8.16.3",
-        "socket.io": "^4.8.1"
+        "socket.io": "^4.8.1",
+        "uuid": "^13.0.0"
     },
     "devDependencies": {
         "nodemon": "^3.1.11"
