--- a/erp/frontend/package.json
+++ b/erp/frontend/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "buffer": "^6.0.3",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "i18next": "^25.7.3",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-calendar": "^6.0.0",
     "react-dom": "^18.3.1",
@@ -25,7 +27,9 @@
     "react-router-dom": "^6.30.2",
     "react-toastify": "^10.0.6",
     "recharts": "^3.6.0",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.8.1",
+    "util": "^0.12.5",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
